--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -106,7 +106,7 @@
                     <a class="button button-primary button-wide-mobile br-6 pulse btn-hover" style="
                           border: 0;
                           background-image: linear-gradient(to right, #03001e, #7303c0, #ec38bc);
-                        " href="/newcall">Try now</a>
+                        " href="/newcall">START MEETING</a>
                   </div>
                 </div>
                 <style>
