--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -37,7 +37,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Videolify. Powerful ~ Fast ~ Easy to use ~ Secure" />
+  <meta name="description" content="Annuities Plus. Powerful ~ Fast ~ Easy to use ~ Secure" />
   <meta name="keywords"
     content="webrtc, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting" />
 
