--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -27,7 +27,7 @@
 
   <!-- Title and Icon -->
 
-  <title>Annuities Plus, Simply Clever.</title>
+  <title>Safely Share, Simply Clever.</title>
   <link rel="shortcut icon" href="../images/favicon.png" />
   <link rel="apple-touch-icon" href="../images/favicon.png" />
 
@@ -37,15 +37,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Annuities Plus. Powerful ~ Fast ~ Easy to use ~ Secure" />
+  <meta name="description" content="Safely Share. Powerful ~ Fast ~ Easy to use ~ Secure" />
   <meta name="keywords"
     content="webrtc, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting" />
 
   <!-- https://ogp.me -->
 
   <!-- Primary Meta Tags -->
-  <title>Annuities Plus ~ The new revolution</title>
-  <meta name="title" content="Videolify">
+  <title>Safely Share ~ The new revolution</title>
+  <meta name="title" content="Safely Share">
   <meta name="description" content="Smooth ~ Fast ~ Simply Clever!">
 
   <!-- Open Graph / Facebook -->
@@ -75,7 +75,8 @@
         <div class="site-header-inner">
           <div class="brand">
             <div class="m-0">
-              <a href="/"><img src="../images/favicon.png" alt="Neon" width="32" height="32" /></a>
+              <a href="/" style="color:white;text-decoration:none;">Safely Share</a>
+              <!--<a href="/"><img src="../images/favicon.png" alt="Neon" width="32" height="32" /></a>-->
             </div>
           </div>
         </div>
@@ -144,16 +145,6 @@
               <div class="tiles-item reveal-from-right">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/icon1.svg" alt="Screen-Share" width="40px" height="40px" />
-                    </div>
-                  </div>
-                  <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">Screen-Share</h4>
-                    <p class="m-0 text-sm">
-                      Share your files, videos, images, etc with screen share feature. Useful for teaching, showing
-                      projects, etc.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -161,16 +152,6 @@
               <div class="tiles-item reveal-from-left">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/feature-tile-icon-04.svg" alt="Webcam Streaming" width="72px" height="72px" />
-                    </div>
-                  </div>
-                  <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">WebCam Streaming</h4>
-                    <p class="m-0 text-sm">
-                      Having the webcam on, allows participants to make a
-                      deeper connection with you. Up to 4k resolution.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -178,17 +159,6 @@
               <div class="tiles-item reveal-from-right">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/icon3.svg" alt="Chat Room" width="40px" height="40px" />
-                    </div>
-                  </div>
-                  <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">Chat Room</h4>
-                    <p class="m-0 text-sm">
-                      Chat with others in meeting, either public chat or
-                      private, save the meeting messages. Integrated emoji
-                      picker to show your feeling.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -196,16 +166,6 @@
               <div class="tiles-item reveal-from-left">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/icon4.svg" alt="Meeting Recording" width="40px" height="40px" />
-                    </div>
-                  </div>
-                  <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">Meeting Recording</h4>
-                    <p class="m-0 text-sm">
-                      Record your Screen, WebCam and Audio. Save it for use it
-                      in future or to share with others.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -213,16 +173,6 @@
               <div class="tiles-item reveal-from-right">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/wboard.svg" alt="Interactive Whiteboard" width="40px" height="40px" />
-                    </div>
-                  </div>
-                  <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">Interactive Whiteboard</h4>
-                    <p class="m-0 text-sm">
-                      Simple collaborative whiteboard to draw and explain your
-                      concepts to the other participants in the meeting.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -235,12 +185,6 @@
                     </div>
                   </div>
                   <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">File Sharing</h4>
-                    <p class="m-0 text-sm">
-                      Share any types of files to all participants in the
-                      meeting, with total security, thanks to Datagram Transport
-                      Layer Security (DTLS).
-                    </p>
                   </div>
                 </div>
               </div>
@@ -248,17 +192,8 @@
               <div class="tiles-item reveal-from-right">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/feature-tile-icon-05.svg" alt="Total Privacy" width="72" height="72" />
-                    </div>
                   </div>
                   <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">Total Privacy</h4>
-                    <p class="m-0 text-sm">
-                      Data stays between you and your participants. Videolify
-                      don't collect or share personal information. It's built
-                      for privacy first.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -266,16 +201,8 @@
               <div class="tiles-item reveal-from-left">
                 <div class="tiles-item-inner">
                   <div class="features-tiles-item-header">
-                    <div class="features-tiles-item-image mb-16">
-                      <img src="../images/icon6.svg" alt="Maximum Security" width="40px" height="40px" />
-                    </div>
                   </div>
                   <div class="features-tiles-item-content">
-                    <h4 class="mt-0 mb-8">Maximum Security</h4>
-                    <p class="m-0 text-sm">
-                      End to end state of the art encryption means your
-                      participants are exactly that. Your calls.
-                    </p>
                   </div>
                 </div>
               </div>
@@ -288,22 +215,11 @@
         <div class="container">
           <div class="team-inner section-inner has-top-divider">
             <div class="section-header center-content reveal-from-bottom">
-              <div class="container-xs">
-                <h2 class="mt-0 mb-16">Supported Browsers</h2>
-              </div>
             </div>
             <div class="tiles-wrap">
               <div class="tiles-item reveal-from-bottom">
                 <div class="tiles-item-inner">
                   <div class="team-item-header">
-                    <div class="team-item-image mb-24">
-                      <img src="../images/browsers.png" alt="Supported Browsers" width="auto" height="auto" />
-                    </div>
-                  </div>
-                  <div class="team-item-content">
-                    <h5 class="team-item-name mt-0 mb-4">
-                      Chrome, Edge, Firefox, Opera, Safari, Brave & more...
-                    </h5>
                   </div>
                 </div>
               </div>
@@ -318,13 +234,14 @@
         <div class="site-footer-inner">
           <div class="footer-top space-between text-xxs">
             <div class="brand">
-              <a href="/"><img src="../images/favicon.png" alt="Videolify logo" width="32px" height="32px" /></a>
+              <a href="/" style="color:white;text-decoration:none;">Safely Share</a>
+              <!--<a href="/"><img src="../images/favicon.png" alt="Videolify logo" width="32px" height="32px" /></a>-->
             </div>
             <div class="footer-social">
               <div>
                 <a target="_blank" href="#">
-                  <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-                    <title>GitHub</title>
+                  <svg width="16" height="16" viewBox="0 0 16 16" xmlns="#">
+                    <title></title>
                     <path
                       d="M7.95 0C3.578 0 0 3.578 0 7.95c0 3.479 2.286 6.46 5.466 7.553.397.1.497-.199.497-.397v-1.392c-2.187.497-2.683-.994-2.683-.994-.398-.894-.895-1.192-.895-1.192-.696-.497.1-.497.1-.497.795.1 1.192.795 1.192.795.696 1.292 1.888.894 2.286.696.1-.497.298-.895.497-1.093-1.79-.2-3.578-.895-3.578-3.976 0-.894.298-1.59.795-2.087-.1-.198-.397-.993.1-2.086 0 0 .695-.2 2.186.795a6.408 6.408 0 0 1 1.987-.299c.696 0 1.392.1 1.988.299 1.49-.994 2.186-.795 2.186-.795.398 1.093.199 1.888.1 2.086.496.597.795 1.292.795 2.087 0 3.081-1.889 3.677-3.677 3.876.298.398.596.895.596 1.59v2.187c0 .198.1.496.596.397C13.714 14.41 16 11.43 16 7.95 15.9 3.578 12.323 0 7.95 0z" />
                   </svg>
@@ -336,14 +253,14 @@
             <nav class="footer-nav">
               <ul class="list-reset">
                 <li>
-                  <a target="_blank" href="/privacy">Privacy Policy</a>
+                  <a target="_blank" href="#">Privacy Policy</a>
 
                   Made by Xapiers Technology
                 </li>
               </ul>
             </nav>
             <div class="footer-copyright">
-              &copy; AnnuitiesPlus, All Rights reserved
+              &copy; Safely Share, All Rights reserved
             </div>
             </br>
           </div>
