--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -94,7 +94,7 @@
                       center-content-mobile
                     ">
                   <h1 class="mt-0 mb-16 reveal-from-bottom" data-reveal-delay="150">
-                    AnnuitiesPlus<br />Free browser based real-time video
+                    Safely Share<br />Free browser based real-time video
                     calls.<br />
                     Simple, Secure, Fast.
                   </h1>
@@ -133,7 +133,7 @@
                   limitation
                 </h2>
                 <p class="m-0">
-                  AnnuitiesPlus is built radically different. We left behind slow
+                  Safely Share is built radically different. We left behind slow
                   bulky servers, opting for peer to peer calling. We
                   engineered a platform with maximum video quality lowest
                   latency that makes your calls crystal clear.
