--- a/public/views/newcall.html
+++ b/public/views/newcall.html
@@ -2,31 +2,11 @@
 <html lang="en" class="no-js">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0GEDC5RTJ9"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-0GEDC5RTJ9");
-  </script>
-
-  <!-- Clarity (clarity.js) - Microsoft analytics -->
-  <script type="text/javascript">
-    (function (c, l, a, r, i, t, y) {
-      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "93jfa0ufr9");
-  </script>
 
   <!-- Title and Icon -->
 
-  <title>AnnuitiesPlus ~ Making a room.</title>
+  <title>Safely Share ~ Making a room.</title>
   <link rel="shortcut icon" href="../images/favicon.png" />
   <link rel="apple-touch-icon" href="../images/favicon.png" />
 
@@ -36,15 +16,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Videolify. Powerful ~ Fast ~ Easy to use ~ Secure." />
+  <meta name="description" content="Safely Share. Powerful ~ Fast ~ Easy to use ~ Secure." />
   <meta name="keywords"
     content="webrtc, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting" />
 
   <!-- https://ogp.me -->
 
   <!-- Primary Meta Tags -->
-    <title>AnnuitiesPlus ~ The new revolution</title>
-    <meta name="title" content="Videolify">
+    <title>Safely Share ~ The new revolution</title>
+    <meta name="title" content="Safely Share">
     <meta name="description" content="Click the link to feel the power of the new revolution~!!">
     <meta name="keywords"
       content="webrtc, webrtc stun, webrtc turn, video meeting, video chat, multi video chat, peer to peer, p2p, zoom" />
@@ -80,7 +60,8 @@
         <div class="site-header-inner">
           <div class="brand">
             <div class="m-0">
-              <a href="/"><img src="../images/favicon.png" alt="Neon" width="32" height="32" /></a>
+              <a href="/" style="color:white;text-decoration:none;">Safely Share</a>
+              <!--<a href="/"><img src="../images/favicon.png" alt="Neon" width="32" height="32" /></a>-->
             </div>
           </div>
         </div>
@@ -131,7 +112,7 @@
             </div>
             <div class="cta-action">
               <div class="mb-24">
-                <label class="form-label screen-reader" for="roomName">videolify</label>
+                <label class="form-label screen-reader" for="roomName">Safely Share</label>
                 <div class="form-group-desktop">
                   <input class="form-input" type="text" id="roomName" value="videolify" />
                   <button class="button button-primary br-6 pulse" style="border-radius:24px"
@@ -151,13 +132,14 @@
         <div class="site-footer-inner">
           <div class="footer-top space-between text-xxs">
             <div class="brand">
-              <a href="/"><img src="../images/favicon.png" alt="Videolify logo" width="32px" height="32px" /></a>
+              <a href="/" style="color:white;text-decoration:none;">Safely Share</a>
+              <!--<a href="/"><img src="../images/favicon.png" alt="Videolify logo" width="32px" height="32px" /></a>-->
             </div>
             <div class="footer-social">
               <div>
-                <a target="_blank" href="https://github.com/jaideep25/videolify">
+                <a target="_blank" href="#">
                   <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-                    <title>GitHub</title>
+                    <title></title>
                     <path
                       d="M7.95 0C3.578 0 0 3.578 0 7.95c0 3.479 2.286 6.46 5.466 7.553.397.1.497-.199.497-.397v-1.392c-2.187.497-2.683-.994-2.683-.994-.398-.894-.895-1.192-.895-1.192-.696-.497.1-.497.1-.497.795.1 1.192.795 1.192.795.696 1.292 1.888.894 2.286.696.1-.497.298-.895.497-1.093-1.79-.2-3.578-.895-3.578-3.976 0-.894.298-1.59.795-2.087-.1-.198-.397-.993.1-2.086 0 0 .695-.2 2.186.795a6.408 6.408 0 0 1 1.987-.299c.696 0 1.392.1 1.988.299 1.49-.994 2.186-.795 2.186-.795.398 1.093.199 1.888.1 2.086.496.597.795 1.292.795 2.087 0 3.081-1.889 3.677-3.677 3.876.298.398.596.895.596 1.59v2.187c0 .198.1.496.596.397C13.714 14.41 16 11.43 16 7.95 15.9 3.578 12.323 0 7.95 0z" />
                   </svg>
@@ -169,14 +151,14 @@
             <nav class="footer-nav">
               <ul class="list-reset">
                 <li>
-                  <a target="_blank" href="/privacy">Privacy Policy</a>
+                  <a target="_blank" href="#">Privacy Policy</a>
 
                   Made by Xapiers Technology
                 </li>
               </ul>
             </nav>
             <div class="footer-copyright">
-              &copy; AnnuitiesPlus, All Rights reserved
+              &copy; Safely Share, All Rights reserved
             </div>
             </br>
           </div>
