--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -2,32 +2,11 @@
 <html lang="en" class="no-js">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 
-  <script async<meta http-equiv="X-UA-Compatible" content="IE=edge"
-    src="https://www.googletagmanager.com/gtag/js?id=G-0GEDC5RTJ9"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-0GEDC5RTJ9");
-  </script>
-
-  <!-- Clarity (clarity.js) - Microsoft analytics -->
-  <script type="text/javascript">
-    (function (c, l, a, r, i, t, y) {
-      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "93jfa0ufr9");
-  </script>
 
   <!-- Title and Icon -->
 
-  <title>Safely Share, Simply Clever.</title>
+  <title>Safely Share ~ Making a room.</title>
   <link rel="shortcut icon" href="../images/favicon.png" />
   <link rel="apple-touch-icon" href="../images/favicon.png" />
 
@@ -37,35 +16,41 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Safely Share. Powerful ~ Fast ~ Easy to use ~ Secure" />
+  <meta name="description" content="Safely Share. Powerful ~ Fast ~ Easy to use ~ Secure." />
   <meta name="keywords"
     content="webrtc, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting" />
 
   <!-- https://ogp.me -->
 
   <!-- Primary Meta Tags -->
-  <title>Safely Share ~ The new revolution</title>
-  <meta name="title" content="Safely Share">
-  <meta name="description" content="Smooth ~ Fast ~ Simply Clever!">
+    <title>Safely Share ~ The new revolution</title>
+    <meta name="title" content="Safely Share">
+    <meta name="description" content="Click the link to feel the power of the new revolution~!!">
+    <meta name="keywords"
+      content="webrtc, webrtc stun, webrtc turn, video meeting, video chat, multi video chat, peer to peer, p2p, zoom" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://videolify.up.railway.app/">
-  <meta property="og:title" content="Videolify">
-  <meta property="og:description" content="Smooth ~ Fast ~ Simply Clever!">
-  <meta property="og:image" content="https://videolify.up.railway.app/images/preview.png">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://videolify.up.railway.app/">
+    <meta property="og:title" content="Videolify">
+    <meta property="og:description" content="Click the link to feel the power of the new revolution~!!">
+    <meta property="og:image" content="https://videolify.up.railway.app/images/preview.png">
+    <meta name="keywords"
+      content="webrtc, webrtc stun, webrtc turn, video meeting, video chat, multi video chat, peer to peer, p2p, zoom" />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://videolify.up.railway.app/">
-  <meta property="twitter:title" content="Videolify">
-  <meta property="twitter:description" content="Smooth ~ Fast ~ Simply Clever!">
-  <meta property="twitter:image" content="https://videolify.up.railway.app/images/preview.png">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://videolify.up.railway.app/">
+    <meta property="twitter:title" content="Videolify">
+    <meta property="twitter:description" content="Click the link to feel the power of the new revolution~!!">
+    <meta property="twitter:image" content="../images/preview.png">
+    <meta name="keywords"
+      content="webrtc, webrtc stun, webrtc turn, video meeting, video chat, multi video chat, peer to peer, p2p, zoom" />
 
-  <!-- StyleSheet -->
+    <!-- StyleSheet -->
 
-  <link rel="stylesheet" href="../css/landing.css" />
-  <link rel="stylesheet" href="../css/newcall.css" />
+    <link rel="stylesheet" href="../css/landing.css" />
+    <link rel="stylesheet" href="../css/newcall.css" />
 </head>
 
 <body class="has-animations">
@@ -94,21 +79,14 @@
                       center-content-mobile
                     ">
                   <h1 class="mt-0 mb-16 reveal-from-bottom" data-reveal-delay="150">
-                    Safely Share<br />Free browser based real-time video
-                    calls.<br />
-                    Simple, Secure, Fast.
+                    Pick name. <br />
+                    Share URL. <br />
+                    Start conference.
                   </h1>
                   <p class="mt-0 mb-32 reveal-from-bottom" data-reveal-delay="300">
-                    Start your next video call with a single click. No
-                    download, plug-in or login required. Just get straight to
-                    talking, messaging and sharing your screen.
+                    Each room has its own disposable URL. Just pick a room
+                    name and share your custom URL. It's really that easy.
                   </p>
-                  <div class="reveal-from-bottom" data-reveal-delay="450">
-                    <a class="button button-primary button-wide-mobile br-6 pulse btn-hover" style="
-                          border: 0;
-                          background-image: linear-gradient(to right, #03001e, #7303c0, #ec38bc);
-                        " href="/newcall">START MEETING</a>
-                  </div>
                 </div>
                 <style>
                   @media (min-width: 641px) {
@@ -117,6 +95,31 @@
                     }
                   }
                 </style>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cta section center-content-mobile reveal-from-bottom">
+        <div class="container">
+          <div class="cta-inner br-12 section-inner cta-split">
+            <div class="cta-slogan">
+              <h3 class="m-0">
+                Pick a room name.<br />
+                How about this one?
+              </h3>
+            </div>
+            <div class="cta-action">
+              <div class="mb-24">
+                <label class="form-label screen-reader" for="roomName">Safely Share</label>
+                <div class="form-group-desktop">
+                  <input class="form-input" type="text" id="roomName" value="videolify" />
+                  <button class="button button-primary br-6 pulse" style="border-radius:24px"
+                    onclick="{window.location.href = '/join/' + document.getElementById('roomName').value}">
+                    Join room
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -132,6 +135,16 @@
               <a href="/" style="color:white;text-decoration:none;">Safely Share</a>
               <!--<a href="/"><img src="../images/favicon.png" alt="Videolify logo" width="32px" height="32px" /></a>-->
             </div>
+            <div class="footer-social">
+              <div>
+                <a target="_blank" href="#">
+                  <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                    <title></title>
+                    <path
+                      d="M7.95 0C3.578 0 0 3.578 0 7.95c0 3.479 2.286 6.46 5.466 7.553.397.1.497-.199.497-.397v-1.392c-2.187.497-2.683-.994-2.683-.994-.398-.894-.895-1.192-.895-1.192-.696-.497.1-.497.1-.497.795.1 1.192.795 1.192.795.696 1.292 1.888.894 2.286.696.1-.497.298-.895.497-1.093-1.79-.2-3.578-.895-3.578-3.976 0-.894.298-1.59.795-2.087-.1-.198-.397-.993.1-2.086 0 0 .695-.2 2.186.795a6.408 6.408 0 0 1 1.987-.299c.696 0 1.392.1 1.988.299 1.49-.994 2.186-.795 2.186-.795.398 1.093.199 1.888.1 2.086.496.597.795 1.292.795 2.087 0 3.081-1.889 3.677-3.677 3.876.298.398.596.895.596 1.59v2.187c0 .198.1.496.596.397C13.714 14.41 16 11.43 16 7.95 15.9 3.578 12.323 0 7.95 0z" />
+                  </svg>
+                </a>
+              </div>
             </div>
           </div>
           <div class="footer-bottom space-between text-xxs invert-order-desktop">
@@ -154,6 +167,7 @@
     </footer>
   </div>
   <script defer src="../js/landing.js"></script>
+  <script defer src="../js/newroom.js"></script>
 </body>
 
 </html>
