--- a/public/views/newcall.html
+++ b/public/views/newcall.html
@@ -79,13 +79,9 @@
                       center-content-mobile
                     ">
                   <h1 class="mt-0 mb-16 reveal-from-bottom" data-reveal-delay="150">
-                    Pick name. <br />
-                    Share URL. <br />
-                    Start conference.
+                    Pick A Name.
                   </h1>
                   <p class="mt-0 mb-32 reveal-from-bottom" data-reveal-delay="300">
-                    Each room has its own disposable URL. Just pick a room
-                    name and share your custom URL. It's really that easy.
                   </p>
                 </div>
                 <style>
@@ -106,8 +102,7 @@
           <div class="cta-inner br-12 section-inner cta-split">
             <div class="cta-slogan">
               <h3 class="m-0">
-                Pick a room name.<br />
-                How about this one?
+                Pick A Room Name.<br />
               </h3>
             </div>
             <div class="cta-action">
