--- a/public/views/login.html
+++ b/public/views/login.html
@@ -58,13 +58,13 @@
 
     <!-- Primary Meta Tags -->
     <title>AnnuitiesPlus ~ The new revolution</title>
-    <meta name="title" content="Videolify" />
+    <meta name="title" content="Annuities Plus" />
     <meta name="description" content="Smooth ~ Fast ~ Simply Clever!" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://videolify.up.railway.app/" />
-    <meta property="og:title" content="Videolify" />
+    <meta property="og:title" content="Annuities Plus" />
     <meta property="og:description" content="Smooth ~ Fast ~ Simply Clever!" />
     <meta
       property="og:image"
@@ -74,7 +74,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://videolify.up.railway.app/" />
-    <meta property="twitter:title" content="Videolify" />
+    <meta property="twitter:title" content="Annuities Plus" />
     <meta
       property="twitter:description"
       content="Smooth ~ Fast ~ Simply Clever!"
