--- a/public/views/newcall.html
+++ b/public/views/newcall.html
@@ -32,7 +32,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://videolify.up.railway.app/">
-    <meta property="og:title" content="Videolify">
+    <meta property="og:title" content="Annuities Plus">
     <meta property="og:description" content="Click the link to feel the power of the new revolution~!!">
     <meta property="og:image" content="https://videolify.up.railway.app/images/preview.png">
     <meta name="keywords"
@@ -41,7 +41,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://videolify.up.railway.app/">
-    <meta property="twitter:title" content="Videolify">
+    <meta property="twitter:title" content="Annuities Plus">
     <meta property="twitter:description" content="Click the link to feel the power of the new revolution~!!">
     <meta property="twitter:image" content="../images/preview.png">
     <meta name="keywords"
